  * MiniTest::Assertions#refute_empty should use mu_pp in the default message. (whatthejeff)

=== 2.2.2 / 2011-06-01

* 2 bug fixes:

  * Got rid of the trailing period in message for assert_equal. (tenderlove)
  * Windows needs more flushing. (Akio Tajima)

=== 2.2.1 / 2011-05-31

* 1 bug fix:

  * My _ONE_ non-rubygems-using minitest user goes to Seattle.rb!

=== 2.2.0 / 2011-05-29

* 6 minor enhancements:

  * assert_equal (and must_equal) now tries to diff output where it makes sense.
    * Added Assertions#diff(exp, act) to be used by assert_equal.
    * Added Assertions#mu_pp_for_diff
    * Added Assertions.diff and diff=
  * Moved minitest hoe-plugin from hoe-seattlerb. (erikh)
  * Skipped tests only output details in verbose mode. (tenderlove+zenspider=xoxo)

=== 2.1.0 / 2011-04-11

* 5 minor enhancements:

  * Added MiniTest::Spec.register_spec_type(matcher, klass) and spec_type(desc)
  * Added ability for specs to share code via subclassing of Spec. (metaskills)
  * Clarified (or tried to) bench_performance_linear's use of threshold.
  * MiniTest::Unit.runner=(runner) provides an easy way of creating custom test runners for specialized needs. (justinweiss)
  * Reverse order of inheritance in teardowns of specs. (deepfryed)

* 3 bug fixes:

  * FINALLY fixed problems of inheriting specs in describe/it/describe scenario. (MGPalmer)
  * Fixed a new warning in 1.9.3.
  * Fixed assert_block's message handling. (nobu)

=== 2.0.2 / 2010-12-24

* 1 minor enhancement:

  * Completed doco on minitest/benchmark for specs.

* 1 bug fix:

  * Benchmarks in specs that didn't call bench_range would die. (zzak).

=== 2.0.1 / 2010-12-15

* 4 minor enhancements:

  * Do not filter backtrace if $DEBUG
  * Exit autorun via nested at_exit handler, in case other libs call exit
  * Make options accesor lazy.
  * Split printing of test name and its time. (nurse)

* 1 bug fix:

  * Fix bug when ^T is hit before runner start

=== 2.0.0 / 2010-11-11

* 3 major enhancements:
